--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/fiber": "^8.16.6",
+    "@szhsin/react-accordion": "^1.2.4",
     "@tabler/icons-react": "^3.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
@@ -20,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1"
   },
   "devDependencies": {
