--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-three/fiber": "^8.16.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.44.0",
     "@szhsin/react-accordion": "^1.2.4",
     "@tabler/icons-react": "^3.4.0",
     "class-variance-authority": "^0.7.0",
@@ -20,8 +22,11 @@
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
+    "next-sanity": "^9.3.10",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.44.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1"
